<resources>
    <string name="app_name">AdinCube Widget</string>
    <string name="configure">Authorization token</string>
    <string name="add_widget">Add widget</string>
    <string name="revenues_choice">Revenues</string>
    <string name="include_admob">Include AdMob revenues</string>
    <string name="currency_choice">Display currency</string>
    <string name="change">Change</string>
</resources>
